fix spacing

--- a/extension/skin/classic/events.css
+++ b/extension/skin/classic/events.css
@@ -20,7 +20,7 @@
 }
 
 .listenerInheritLabel {
-    margin-left: 14px;
+    margin-left: 12px;
     font-weight: bold;
 }
 .listenerInheritLabel::after {
